--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends":"@rocketseat/eslint-config/react",
+  "plugins": ["simple-import-sort"],
+  "rules": {
+    "simple-import-sort/imports": "error",
+    "camelcase": "off",
+    "@typescript-eslint/no-explicit-any": "off"
+  }
 }
